[gd_scene load_steps=12 format=3 uid="uid://bu3nk5kiqk840"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_kbyiu"]
[ext_resource type="Texture2D" uid="uid://cwf6dyi56tgo" path="res://art/tile_0088.png" id="1_w0od8"]
[ext_resource type="Resource" uid="uid://dp734ni2arcse" path="res://scenes/run/run_startup.tres" id="2_12g6q"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://art/tile_0084.png" id="2_lqdec"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="3_of237"]
[ext_resource type="Texture2D" uid="uid://con6y7mc74c5a" path="res://art/tile_0120.png" id="4_dm7rg"]
[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://art/tile_0110.png" id="5_lh7ja"]
[ext_resource type="Texture2D" uid="uid://c24y6l0ivlqp7" path="res://art/tile_0108.png" id="6_fgogg"]

[sub_resource type="Gradient" id="Gradient_f0706"]
colors = PackedColorArray(0.239216, 0.129412, 0.0705882, 1, 0.054902, 0, 0.0588235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x4bqt"]
gradient = SubResource("Gradient_f0706")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_f0t5t"]
font_size = 15
shadow_size = 4
shadow_color = Color(0.406643, 0.186816, 0.110188, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kbyiu")
run_statup = ExtResource("2_12g6q")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_x4bqt")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -53.5
offset_right = 120.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
text = "Red Seed Redemption Row
beginning mockup"
label_settings = SubResource("LabelSettings_f0t5t")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_right = 30.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Contune" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Continue"

[node name="NewRun" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "New Run"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Exit"

[node name="Assasin" type="Sprite2D" parent="."]
position = Vector2(19, 95)
scale = Vector2(2, 2)
texture = ExtResource("1_w0od8")

[node name="Wizard" type="Sprite2D" parent="."]
position = Vector2(46, 87)
scale = Vector2(2, 2)
texture = ExtResource("2_lqdec")

[node name="Warrior" type="Sprite2D" parent="."]
position = Vector2(41, 110)
scale = Vector2(2, 2)
texture = ExtResource("3_of237")

[node name="Bat" type="Sprite2D" parent="."]
position = Vector2(198, 77)
scale = Vector2(2, 2)
texture = ExtResource("4_dm7rg")
flip_h = true

[node name="Crab" type="Sprite2D" parent="."]
position = Vector2(211, 101)
scale = Vector2(2, 2)
texture = ExtResource("5_lh7ja")
flip_h = true

[node name="Ghost" type="Sprite2D" parent="."]
position = Vector2(226, 76)
scale = Vector2(2, 2)
texture = ExtResource("6_fgogg")
flip_h = true

[connection signal="pressed" from="VBoxContainer/Contune" to="." method="_on_contune_pressed"]
[connection signal="pressed" from="VBoxContainer/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
